course card / join course section final draft

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     <section class="join-course">
       <div class="course-card">
         <div class="course-card-texts">
-          <h2 class="course-card-head">Interested In Joining Our Course</h2>
+          <h2 class="course-card-heading">Interested In Joining Our Course</h2>
           <p class="course-card-desc">
             Get the expert's opinion and help throughout your journey.
           </p>
