course card image edit

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
           <img
             src="images/join.png"
             alt="Man Image"
-            class="course-join-image"
+            class="join-course-image"
           />
         </div>
       </div>
