--- a/index.html
+++ b/index.html
@@ -473,5 +473,12 @@
         </div>
       </div>
     </section>
+
+    <!-------------------------->
+    <!-- Testimonials Section -->
+    <!-------------------------->
+    <section class="testimonials">
+      
+    </section>
   </body>
 </html>
