testimonials page html structure

--- a/index.html
+++ b/index.html
@@ -478,7 +478,26 @@
     <!-- Testimonials Section -->
     <!-------------------------->
     <section class="testimonials">
-      
+      <div class="testimonials-card">
+        <div class="testimonials-texts-rating">
+          <h4 class="testimonials-title">Testimonials</h4>
+          <h2 class="testimonials-heading">What Our Students Say</h2>
+          <p class="testimonials-desc">Discover success stories through the voices of our students - where personal growth meets academic excellence in their own words.</p>
+          <div class="testimonials-rating-pic">
+            <img src="images/google-rating.png" alt="Google Rating">
+          </div>
+        </div>
+        <!-- personal testimonial card -->
+        <div class="testimonials-personal">
+          <div class="card-rating">
+            <img src="images/star.svg" alt="star rating">
+          </div>
+          <div class="testimonial-description">
+            <p>If you are planning your career in digital marketing futura labs is the best place for you. Experienced trainers, excellent classes and atmosphere was good. Trainers are always there to clear our doubts regarding the topics. I am well satisfied.</p>
+            <h4>Vishnu Ramesh</h4>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
