testimonials page styling second version

--- a/index.html
+++ b/index.html
@@ -504,10 +504,10 @@
             </p>
             <h4>Vishnu Ramesh</h4>
           </div>
-          <div>
-            <button class="testimonials-button">View All&nbsp;<i class="fa-solid fa-circle-chevron-right"></i></button>
-          </div>
         </div>
+        <button class="testimonials-button">
+          View All&nbsp;<i class="fa-solid fa-circle-chevron-right"></i>
+        </button>
       </div>
     </section>
   </body>
