testimonials page desktop view layout fixing

--- a/index.html
+++ b/index.html
@@ -490,7 +490,10 @@
             <img src="images/google-rating.png" alt="Google Rating" />
           </div>
         </div>
+
         <!-- personal testimonial card -->
+
+        <!-- Mobile view testimonial card -->
         <div class="testimonials-personal">
           <div class="card-rating">
             <img src="images/star.svg" alt="star rating" />
@@ -505,6 +508,52 @@
             <h4>Vishnu Ramesh</h4>
           </div>
         </div>
+
+        <!-- Desktop view testimonial card -->
+        <div class="desktop-testimonial-cards">
+          <!-- div 1 -->
+          <div class="testimonials-desktop">
+            <div class="card-rating">
+              <img src="images/star.svg" alt="star rating" />
+            </div>
+            <div class="testimonials-review">
+              <p>
+                If you are planning your career in digital marketing futura labs
+                is the best place for you. Experienced trainers, excellent
+                classes and atmosphere was good. Trainers are always there to
+                clear our doubts regarding the topics. I am well satisfied.
+              </p>
+              <h4>Vishnu Ramesh</h4>
+            </div>
+          </div>
+
+          <!-- card 2 -->
+          <div class="testimonials-desktop">
+            <div class="card-rating">
+              <img src="images/star.svg" alt="star rating" />
+            </div>
+            <div class="testimonials-review">
+              <p>
+                Futura Labs is an excellent choice for internships. The training and placement support provided by the institute is top-notch, and the staff is dedicated to helping students succeed.
+              </p>
+              <h4>Vismaya K</h4>
+            </div>
+          </div>
+
+          <!-- card 3 -->
+          <div class="testimonials-desktop">
+            <div class="card-rating">
+              <img src="images/star.svg" alt="star rating" />
+            </div>
+            <div class="testimonials-review">
+              <p>
+                The learning experience and atmosphere in futura labs is great. The trainers are always there, to help, no matter which time they are always willing to help us. They are providing hr classes to improve our communication and interview skills.
+              </p>
+              <h4>Deepthi Vishnu</h4>
+            </div>
+          </div>
+        </div>
+
         <button class="testimonials-button">
           View All&nbsp;<i class="fa-solid fa-circle-chevron-right"></i>
         </button>
