advisor page rough version

--- a/index.html
+++ b/index.html
@@ -534,7 +534,9 @@
             </div>
             <div class="testimonials-review">
               <p>
-                Futura Labs is an excellent choice for internships. The training and placement support provided by the institute is top-notch, and the staff is dedicated to helping students succeed.
+                Futura Labs is an excellent choice for internships. The training
+                and placement support provided by the institute is top-notch,
+                and the staff is dedicated to helping students succeed.
               </p>
               <h4>Vismaya K</h4>
             </div>
@@ -547,7 +549,10 @@
             </div>
             <div class="testimonials-review">
               <p>
-                The learning experience and atmosphere in futura labs is great. The trainers are always there, to help, no matter which time they are always willing to help us. They are providing hr classes to improve our communication and interview skills.
+                The learning experience and atmosphere in futura labs is great.
+                The trainers are always there, to help, no matter which time
+                they are always willing to help us. They are providing hr
+                classes to improve our communication and interview skills.
               </p>
               <h4>Deepthi Vishnu</h4>
             </div>
@@ -557,6 +562,41 @@
         <button class="testimonials-button">
           View All&nbsp;<i class="fa-solid fa-circle-chevron-right"></i>
         </button>
+      </div>
+    </section>
+
+    <!-------------------------->
+    <!-- Advisor ____ Section -->
+    <!-------------------------->
+    <section class="advisor-section">
+      <div class="advisor-content">
+        <div class="image-container">
+          <img src="images/enquire.png" alt="Advisor" />
+        </div>
+        <div class="form-container">
+          <h4 class="form-title">Enquire now</h4>
+          <h1>Talk To Our Advisor</h1>
+          <p>
+            Have questions, ideas, or just want to say hello? We'd love to hear
+            from you! Reach out to us by filling up your contact details, and
+            let's start a conversation.
+          </p>
+          <form>
+            <input type="text" placeholder="Your name" />
+            <input type="text" placeholder="Subject" />
+            <input type="email" placeholder="Email address" />
+            <textarea placeholder="Message"></textarea>
+            <input type="text" placeholder="Contact number" />
+            <select>
+              <option value="" disabled selected>Select Location</option>
+              <option value="location1">Kozhikode</option>
+              <option value="location2">Kochi</option>
+            </select>
+            <button type="submit">
+              Submit&nbsp;<i class="fa-solid fa-circle-chevron-right"></i>
+            </button>
+          </form>
+        </div>
       </div>
     </section>
   </body>
