enquiry section first commit

--- a/index.html
+++ b/index.html
@@ -568,5 +568,12 @@
     <!-------------------------->
     <!-- Advisor ____ Section -->
     <!-------------------------->
+    <section class="enquiry">
+      <div class="enquiry-contents">
+        <div class="enquiry-image-container">
+          <img src="images/enquire.png" alt="Enquiry" class="enquiry-image">
+        </div>
+      </div>
+    </section>
   </body>
 </html>
