enquiry div rough version

--- a/index.html
+++ b/index.html
@@ -571,7 +571,37 @@
     <section class="enquiry">
       <div class="enquiry-contents">
         <div class="enquiry-image-container">
-          <img src="images/enquire.png" alt="Enquiry" class="enquiry-image">
+          <img src="images/enquire.png" alt="Enquiry" class="enquiry-image" />
+        </div>
+        <div class="enquiry-form">
+          <h4 class="enquiry-title">Enquire Now</h4>
+          <h2 class="enquiry-heading">Talk To Our Advisor</h2>
+          <p class="enquiry-desc">
+            Have questions, ideas, or just want to say hello? We'd love to hear
+            from you! Reach out to us by filling up your contact details, and
+            let's start a conversation.
+          </p>
+          <div class="enquiry-form-body">
+            <form>
+              <label for="name">Your name</label>
+              <input type="text" id="name" name="name" />
+              <br />
+              <label for="email">Email address</label>
+              <input type="email" id="email" name="email" />
+              <br />
+              <label for="contact">Contact number</label>
+              <input type="tel" id="contact" name="contact" />
+              <br />
+              <label for="location">Select Location</label>
+              <input type="text" id="location" name="location" />
+              <br />
+              <label for="subject">Subject</label>
+              <input type="text" id="subject" name="subject" />
+              <br />
+              <label for="message">Message</label>
+              <textarea id="message" name="message"></textarea>
+            </form>
+          </div>
         </div>
       </div>
     </section>
