form layout rough version

--- a/index.html
+++ b/index.html
@@ -574,32 +574,51 @@
           <img src="images/enquire.png" alt="Enquiry" class="enquiry-image" />
         </div>
         <div class="enquiry-form">
-          <h4 class="enquiry-title">Enquire Now</h4>
-          <h2 class="enquiry-heading">Talk To Our Advisor</h2>
-          <p class="enquiry-desc">
-            Have questions, ideas, or just want to say hello? We'd love to hear
-            from you! Reach out to us by filling up your contact details, and
-            let's start a conversation.
-          </p>
+          <div class="enquiry-head-section">
+            <h4 class="enquiry-title">Enquire Now</h4>
+            <h2 class="enquiry-heading">Talk To Our Advisor</h2>
+            <p class="enquiry-desc">
+              Have questions, ideas, or just want to say hello? We'd love to
+              hear from you! Reach out to us by filling up your contact details,
+              and let's start a conversation.
+            </p>
+          </div>
           <div class="enquiry-form-body">
             <form>
-              <label for="name">Your name</label>
-              <input type="text" id="name" name="name" />
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Your Name"
+              />
               <br />
-              <label for="email">Email address</label>
-              <input type="email" id="email" name="email" />
+              <input type="email" id="email" name="email" placeholder="Email" />
               <br />
-              <label for="contact">Contact number</label>
-              <input type="tel" id="contact" name="contact" />
+              <input
+                type="tel"
+                id="contact"
+                name="contact"
+                placeholder="Contact Number"
+              />
               <br />
-              <label for="location">Select Location</label>
-              <input type="text" id="location" name="location" />
+              <select id="location" name="location">
+                <option>Select Location</option>
+                <option>Kozhikode</option>
+                <option>Kochi</option>
+              </select>
               <br />
-              <label for="subject">Subject</label>
-              <input type="text" id="subject" name="subject" />
+              <input
+                type="text"
+                id="subject"
+                name="subject"
+                placeholder="Subject"
+              />
               <br />
-              <label for="message">Message</label>
-              <textarea id="message" name="message"></textarea>
+              <textarea
+                id="message"
+                name="message"
+                placeholder="Message"
+              ></textarea>
             </form>
           </div>
         </div>
