enquiry section layout

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
     </section>
 
     <!-------------------------->
-    <!-- Advisor ____ Section -->
+    <!-- Enquiry ____ Section -->
     <!-------------------------->
     <section class="enquiry">
       <div class="enquiry-contents">
