form body layout fix

--- a/index.html
+++ b/index.html
@@ -583,50 +583,43 @@
               and let's start a conversation.
             </p>
           </div>
-          <div class="form-main-container">
-            <div class="enquiry-form-body">
-              <form>
-                <input
-                  type="text"
-                  id="name"
-                  name="name"
-                  placeholder="Your Name"
-                />
-                <br />
-                <input
-                  type="email"
-                  id="email"
-                  name="email"
-                  placeholder="Email"
-                />
-                <br />
-                <input
-                  type="tel"
-                  id="contact"
-                  name="contact"
-                  placeholder="Contact Number"
-                />
-                <br />
-                <select id="location" name="location">
-                  <option>Select Location</option>
-                  <option>Kozhikode</option>
-                  <option>Kochi</option>
-                </select>
-                <br />
-                <input
-                  type="text"
-                  id="subject"
-                  name="subject"
-                  placeholder="Subject"
-                />
-                <br />
-                <textarea
-                  id="message"
-                  name="message"
-                  placeholder="Message"
-                ></textarea>
-              </form>
-            </div>
+          <div class="enquiry-form-body">
+            <form>
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Your Name"
+              />
+              <br />
+              <input type="email" id="email" name="email" placeholder="Email" />
+              <br />
+              <input
+                type="tel"
+                id="contact"
+                name="contact"
+                placeholder="Contact Number"
+              />
+              <br />
+              <select id="location" name="location">
+                <option>Select Location</option>
+                <option>Kozhikode</option>
+                <option>Kochi</option>
+              </select>
+              <br />
+              <input
+                type="text"
+                id="subject"
+                name="subject"
+                placeholder="Subject"
+              />
+              <br />
+              <textarea
+                id="message"
+                name="message"
+                placeholder="Message"
+              ></textarea>
+            </form>
           </div>
         </div>
       </div>
