enquiry section button

--- a/index.html
+++ b/index.html
@@ -620,6 +620,9 @@
                 placeholder="Message"
               ></textarea>
             </form>
+            <div class="enquiry-button-container">
+              <button class="enquiry-button">Submit&nbsp;<i class="fa-solid fa-circle-chevron-right"></i></button>
+            </div>
           </div>
         </div>
       </div>
