--- a/index.html
+++ b/index.html
@@ -621,9 +621,29 @@
               ></textarea>
             </form>
             <div class="enquiry-button-container">
-              <button class="enquiry-button">Submit&nbsp;<i class="fa-solid fa-circle-chevron-right"></i></button>
+              <button class="enquiry-button">
+                Submit&nbsp;<i class="fa-solid fa-circle-chevron-right"></i>
+              </button>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-------------------->
+    <!-- FAQ __ Section -->
+    <!-------------------->
+    <section class="faq">
+      <div class="faq-texts">
+        <h4 class="faq-title">Most Asked Questions</h4>
+        <h2>Frequently Asked Questions</h2>
+      </div>
+      <div class="faq-contents">
+        <div class="faq-questions">
+
+        </div>
+        <div class="faq-image-container">
+          <img src="images/faq.png" alt="FAQ Page Image" class="faq-image">
         </div>
       </div>
     </section>
