faq page rough v2.2

--- a/index.html
+++ b/index.html
@@ -636,11 +636,11 @@
     <section class="faq">
       <div class="faq-texts">
         <h4 class="faq-title">Most Asked Questions</h4>
-        <h2>Frequently Asked Questions</h2>
+        <h2 class="faq-heading">Frequently Asked Questions</h2>
       </div>
       <div class="faq-contents">
         <div class="faq-questions">
-
+          
         </div>
         <div class="faq-image-container">
           <img src="images/faq.png" alt="FAQ Page Image" class="faq-image">
