faq page questions and answers

--- a/index.html
+++ b/index.html
@@ -639,11 +639,42 @@
         <h2 class="faq-heading">Frequently Asked Questions</h2>
       </div>
       <div class="faq-contents">
-        <div class="faq-questions">
-          
+        <!-- FAQ Questions and answers -->
+        <!-- Question 1 -->
+        <div class="faq-item">
+          <button class="faq-question">
+            How will Futura Labs IT internship help me advance my career?
+            <span class="icon">+</span>
+          </button>
+          <div class="faq-answer">
+            <p>
+              By preparing the trainees for interviews and proposing
+              applications, we help them crack the right job opportunity. With
+              well-experienced trainers, hands-on training, a state-of-the-art
+              facility, and a high-quality syllabus, you are bound to have the
+              best learning experience with Futura Labs.
+            </p>
+          </div>
+        </div>
+        <hr />
+        <!-- Question 2 -->
+        <div class="faq-item">
+          <button class="faq-question">
+            How will Futura Labs IT internship help me advance my career?
+            <span class="icon">+</span>
+          </button>
+          <div class="faq-answer">
+            <p>
+              By preparing the trainees for interviews and proposing
+              applications, we help them crack the right job opportunity. With
+              well-experienced trainers, hands-on training, a state-of-the-art
+              facility, and a high-quality syllabus, you are bound to have the
+              best learning experience with Futura Labs.
+            </p>
+          </div>
         </div>
         <div class="faq-image-container">
-          <img src="images/faq.png" alt="FAQ Page Image" class="faq-image">
+          <img src="images/faq.png" alt="FAQ Page Image" class="faq-image" />
         </div>
       </div>
     </section>
