faq section changes

--- a/index.html
+++ b/index.html
@@ -660,16 +660,12 @@
         <!-- Question 2 -->
         <div class="faq-item">
           <button class="faq-question">
-            How will Futura Labs IT internship help me advance my career?
+            Is there a basic requirement to be able to sign up for Futura Labs IT Internships?
             <span class="icon">+</span>
           </button>
           <div class="faq-answer">
             <p>
-              By preparing the trainees for interviews and proposing
-              applications, we help them crack the right job opportunity. With
-              well-experienced trainers, hands-on training, a state-of-the-art
-              facility, and a high-quality syllabus, you are bound to have the
-              best learning experience with Futura Labs.
+              Anyone with basic programming knowledge can sign up for Futura Labs courses.
             </p>
           </div>
         </div>
@@ -677,16 +673,25 @@
         <!-- Question 3 -->
         <div class="faq-item">
           <button class="faq-question">
-            How will Futura Labs IT internship help me advance my career?
+            Are Futura Labs IT interships available in Kochi only?
             <span class="icon">+</span>
           </button>
           <div class="faq-answer">
             <p>
-              By preparing the trainees for interviews and proposing
-              applications, we help them crack the right job opportunity. With
-              well-experienced trainers, hands-on training, a state-of-the-art
-              facility, and a high-quality syllabus, you are bound to have the
-              best learning experience with Futura Labs.
+              No. We make our courses available in Kozhikode
+            </p>
+          </div>
+        </div>
+        <hr>
+        <!-- Question 4 -->
+        <div class="faq-item">
+          <button class="faq-question">
+            Do you provide placement assistance after IT intership?
+            <span class="icon">+</span>
+          </button>
+          <div class="faq-answer">
+            <p>
+              Yes, we are one of the reputable Software Training institutes, and we will assis with real placement support.
             </p>
           </div>
         </div>
