faq section minor changes

--- a/index.html
+++ b/index.html
@@ -640,59 +640,62 @@
       </div>
       <div class="faq-contents">
         <!-- FAQ Questions and answers -->
-        <!-- Question 1 -->
-        <div class="faq-item">
-          <button class="faq-question">
-            How will Futura Labs IT internship help me advance my career?
-            <span class="icon">+</span>
-          </button>
-          <div class="faq-answer">
-            <p>
-              By preparing the trainees for interviews and proposing
-              applications, we help them crack the right job opportunity. With
-              well-experienced trainers, hands-on training, a state-of-the-art
-              facility, and a high-quality syllabus, you are bound to have the
-              best learning experience with Futura Labs.
-            </p>
+        <div class="faq-qn">
+          <!-- Question 1 -->
+          <div class="faq-item">
+            <button class="faq-question">
+              How will Futura Labs IT internship help me advance my career?
+              <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+              <p>
+                By preparing the trainees for interviews and proposing
+                applications, we help them crack the right job opportunity. With
+                well-experienced trainers, hands-on training, a state-of-the-art
+                facility, and a high-quality syllabus, you are bound to have the
+                best learning experience with Futura Labs.
+              </p>
+            </div>
           </div>
-        </div>
-        <hr />
-        <!-- Question 2 -->
-        <div class="faq-item">
-          <button class="faq-question">
-            Is there a basic requirement to be able to sign up for Futura Labs IT Internships?
-            <span class="icon">+</span>
-          </button>
-          <div class="faq-answer">
-            <p>
-              Anyone with basic programming knowledge can sign up for Futura Labs courses.
-            </p>
+          <hr />
+          <!-- Question 2 -->
+          <div class="faq-item">
+            <button class="faq-question">
+              Is there a basic requirement to be able to sign up for Futura Labs
+              IT Internships?
+              <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+              <p>
+                Anyone with basic programming knowledge can sign up for Futura
+                Labs courses.
+              </p>
+            </div>
           </div>
-        </div>
-        <hr />
-        <!-- Question 3 -->
-        <div class="faq-item">
-          <button class="faq-question">
-            Are Futura Labs IT interships available in Kochi only?
-            <span class="icon">+</span>
-          </button>
-          <div class="faq-answer">
-            <p>
-              No. We make our courses available in Kozhikode
-            </p>
+          <hr />
+          <!-- Question 3 -->
+          <div class="faq-item">
+            <button class="faq-question">
+              Are Futura Labs IT interships available in Kochi only?
+              <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+              <p>No. We make our courses available in Kozhikode</p>
+            </div>
           </div>
-        </div>
-        <hr>
-        <!-- Question 4 -->
-        <div class="faq-item">
-          <button class="faq-question">
-            Do you provide placement assistance after IT intership?
-            <span class="icon">+</span>
-          </button>
-          <div class="faq-answer">
-            <p>
-              Yes, we are one of the reputable Software Training institutes, and we will assis with real placement support.
-            </p>
+          <hr />
+          <!-- Question 4 -->
+          <div class="faq-item">
+            <button class="faq-question">
+              Do you provide placement assistance after IT intership?
+              <span class="icon">+</span>
+            </button>
+            <div class="faq-answer">
+              <p>
+                Yes, we are one of the reputable Software Training institutes,
+                and we will assis with real placement support.
+              </p>
+            </div>
           </div>
         </div>
         <div class="faq-image-container">
