faq icon layout fix

--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
           <!-- Question 1 -->
           <div class="faq-item">
             <button class="faq-question">
-              How will Futura Labs IT internship help me advance my career?
+              How will Futura Labs IT internship help me advance my career?&nbsp;
               <span class="icon">+</span>
             </button>
             <div class="faq-answer">
@@ -662,7 +662,7 @@
           <div class="faq-item">
             <button class="faq-question">
               Is there a basic requirement to be able to sign up for Futura Labs
-              IT Internships?
+              IT Internships?&nbsp;
               <span class="icon">+</span>
             </button>
             <div class="faq-answer">
@@ -676,7 +676,7 @@
           <!-- Question 3 -->
           <div class="faq-item">
             <button class="faq-question">
-              Are Futura Labs IT interships available in Kochi only?
+              Are Futura Labs IT interships available in Kochi only?&nbsp;
               <span class="icon">+</span>
             </button>
             <div class="faq-answer">
@@ -687,7 +687,7 @@
           <!-- Question 4 -->
           <div class="faq-item">
             <button class="faq-question">
-              Do you provide placement assistance after IT intership?
+              Do you provide placement assistance after IT intership?&nbsp;
               <span class="icon">+</span>
             </button>
             <div class="faq-answer">
