footer section first draft

--- a/index.html
+++ b/index.html
@@ -703,5 +703,29 @@
         </div>
       </div>
     </section>
+
+    <!----------------------->
+    <!-- Footer _____ page -->
+    <!----------------------->
+    <footer>
+      <div class="footer-image-container">
+        <img src="images/logo.svg" alt="footer image" class="footer-logo">
+      </div>
+      <div class="footer-location">
+        <div class="location1">
+            <h4 class="loc1-title"></h4><i class="fa-solid fa-location-arrow"></i>Kozhikode</h4>
+          <p class="loc1-desc">4th Floor, Muallim Arcase, Wayanad Road, Near MC College, Kozhikode - 673011</p>
+ 
+            <i class="fa-solid fa-phone"></i>
+
+        </div>
+        <!-- <div class="divider">
+          <hr>
+        </div> -->
+        <div class="location2">
+
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
