--- a/index.html
+++ b/index.html
@@ -710,7 +710,13 @@
     <!-- Conclusion - page -->
     <!----------------------->
     <section class="conclusion">
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque est consectetur error laboriosam? Placeat ab incidunt doloribus totam iure nesciunt nam neque quis? Provident voluptatum quod explicabo nesciunt, placeat facere quaerat pariatur quae corporis, dignissimos laborum sint accusantium, sequi ipsa.</p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque est
+        consectetur error laboriosam? Placeat ab incidunt doloribus totam iure
+        nesciunt nam neque quis? Provident voluptatum quod explicabo nesciunt,
+        placeat facere quaerat pariatur quae corporis, dignissimos laborum sint
+        accusantium, sequi ipsa.
+      </p>
     </section>
   </body>
 </html>
