--- a/index.html
+++ b/index.html
@@ -710,13 +710,9 @@
     <!-- Conclusion - page -->
     <!----------------------->
     <section class="conclusion">
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque est
-        consectetur error laboriosam? Placeat ab incidunt doloribus totam iure
-        nesciunt nam neque quis? Provident voluptatum quod explicabo nesciunt,
-        placeat facere quaerat pariatur quae corporis, dignissimos laborum sint
-        accusantium, sequi ipsa.
-      </p>
+      <div class="conclusion-logo">
+        <img src="images/logo.svg" alt="conclusion part logo" class="conc-logo">
+      </div>
     </section>
   </body>
 </html>
