--- a/index.html
+++ b/index.html
@@ -707,7 +707,12 @@
     </section>
 
     <!----------------------->
-    <!-- Footer _____ page -->
+    <!--conclusion section -->
     <!----------------------->
+    <section class="conclusion">
+      <div class="conc-image-container">
+        <img src="images/logo.svg" alt="conclusion part Logo" class="conc-logo" />
+      </div>
+    </section>
   </body>
 </html>
