conclusion rough draft

--- a/index.html
+++ b/index.html
@@ -713,6 +713,10 @@
       <div class="conclusion-logo">
         <img src="images/logo.svg" alt="conclusion part logo" class="conc-logo">
       </div>
+      <div class="location1">
+        <p><i class="fa-solid fa-location-arrow"></i>&nbsp;Kozhikode</p>
+        <p>4th Floor, Muallim Arcase, Wayanad Road, Near MC College, Kozhikode - 673011</p>
+      </div>
     </section>
   </body>
 </html>
