conclusion part final draft

--- a/index.html
+++ b/index.html
@@ -711,11 +711,41 @@
     <!----------------------->
     <section class="conclusion">
       <div class="conclusion-logo">
-        <img src="images/logo.svg" alt="conclusion part logo" class="conc-logo">
+        <img
+          src="images/logo.svg"
+          alt="conclusion part logo"
+          class="conc-logo"
+        />
       </div>
       <div class="location1">
         <p><i class="fa-solid fa-location-arrow"></i>&nbsp;Kozhikode</p>
-        <p>4th Floor, Muallim Arcase, Wayanad Road, Near MC College, Kozhikode - 673011</p>
+        <p>
+          4th Floor, Muallim Arcase, Wayanad Road, Near MC College, Kozhikode -
+          673011
+        </p>
+        <p>
+          <i class="fa-solid fa-phone"></i>&nbsp;+91 79944 20046 / +91 79944
+          20045
+        </p>
+        <p><i class="fa-solid fa-envelope"></i>&nbsp;info@thefuturalabs.com</p>
+      </div>
+      <!-- dividing lines between locations -->
+      <div class="divider">
+        <hr />
+      </div>
+      <div class="location2">
+        <p><i class="fa-solid fa-location-arrow"></i>&nbsp;Kochi</p>
+        <p>
+          Door No: 38/3989,Opposite Metro Pillar No.489, Edappally South,
+          Palarivattom Kochi, Pin: 682025
+        </p>
+        <p>
+          <i class="fa-solid fa-phone"></i>&nbsp;+91 97780 43002 / +91 99463
+          26888
+        </p>
+        <p>
+          <i class="fa-solid fa-envelope"></i>&nbsp;connectus@thefuturalabs.com
+        </p>
       </div>
     </section>
   </body>
