quick links, courses, and socials section

--- a/index.html
+++ b/index.html
@@ -710,42 +710,92 @@
     <!-- Conclusion - page -->
     <!----------------------->
     <section class="conclusion">
-      <div class="conclusion-logo">
-        <img
-          src="images/logo.svg"
-          alt="conclusion part logo"
-          class="conc-logo"
-        />
+      <!-- 1st part contents -->
+      <div class="conclusion-contents">
+        <div class="conclusion-logo">
+          <img
+            src="images/logo.svg"
+            alt="conclusion part logo"
+            class="conc-logo"
+          />
+        </div>
+        <div class="location1">
+          <p><i class="fa-solid fa-location-arrow"></i>&nbsp;Kozhikode</p>
+          <p>
+            4th Floor, Muallim Arcase, Wayanad Road, Near MC College, Kozhikode
+            - 673011
+          </p>
+          <p>
+            <i class="fa-solid fa-phone"></i>&nbsp;+91 79944 20046 / +91 79944
+            20045
+          </p>
+          <p>
+            <i class="fa-solid fa-envelope"></i>&nbsp;info@thefuturalabs.com
+          </p>
+        </div>
+        <!-- dividing lines between locations -->
+        <div class="divider">
+          <hr />
+        </div>
+        <div class="location2">
+          <p><i class="fa-solid fa-location-arrow"></i>&nbsp;Kochi</p>
+          <p>
+            Door No: 38/3989,Opposite Metro Pillar No.489, Edappally South,
+            Palarivattom Kochi, Pin: 682025
+          </p>
+          <p>
+            <i class="fa-solid fa-phone"></i>&nbsp;+91 97780 43002 / +91 99463
+            26888
+          </p>
+          <p>
+            <i class="fa-solid fa-envelope"></i
+            >&nbsp;connectus@thefuturalabs.com
+          </p>
+        </div>
       </div>
-      <div class="location1">
-        <p><i class="fa-solid fa-location-arrow"></i>&nbsp;Kozhikode</p>
-        <p>
-          4th Floor, Muallim Arcase, Wayanad Road, Near MC College, Kozhikode -
-          673011
-        </p>
-        <p>
-          <i class="fa-solid fa-phone"></i>&nbsp;+91 79944 20046 / +91 79944
-          20045
-        </p>
-        <p><i class="fa-solid fa-envelope"></i>&nbsp;info@thefuturalabs.com</p>
-      </div>
-      <!-- dividing lines between locations -->
-      <div class="divider">
+
+      <!-- page divider -->
+      <div class="conc-divider">
         <hr />
       </div>
-      <div class="location2">
-        <p><i class="fa-solid fa-location-arrow"></i>&nbsp;Kochi</p>
-        <p>
-          Door No: 38/3989,Opposite Metro Pillar No.489, Edappally South,
-          Palarivattom Kochi, Pin: 682025
-        </p>
-        <p>
-          <i class="fa-solid fa-phone"></i>&nbsp;+91 97780 43002 / +91 99463
-          26888
-        </p>
-        <p>
-          <i class="fa-solid fa-envelope"></i>&nbsp;connectus@thefuturalabs.com
-        </p>
+
+      <!-- 2nd part contents -->
+      <div class="conclusion-details">
+        <!-- quick links -->
+        <div class="quick-links">
+          <h2 class="details-heading">Quick Links</h2>
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Courses</li>
+            <li>Placements</li>
+            <li>Careers</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
+
+        <!-- courses -->
+        <div class="courses">
+          <h2 class="details-heading">Courses</h2>
+        <ul>
+          <li>Python-Django Fullstack</li>
+          <li>MERN Fullstack</li>
+          <li>React JS</li>
+          <li>Front-End Development</li>
+          <li>Data Science</li>
+        </ul>
+        </div>
+
+        <!-- social links -->
+         <div class="socials">
+          <h2 class="details-heading">Socials</h2>
+          <ul>
+            <li><i class="fa-brands fa-facebook"></i></li>
+            <li><i class="fa-brands fa-linkedin"></i></li>
+            <li><i class="fa-brands fa-square-instagram"></i></li>
+            <li><i class="fa-brands fa-google"></i></li>
+          </ul>
+         </div>
       </div>
     </section>
   </body>
