social links html

--- a/index.html
+++ b/index.html
@@ -789,12 +789,12 @@
         <!-- social links -->
          <div class="socials">
           <h2 class="details-heading">Socials</h2>
-          <ul>
-            <li><i class="fa-brands fa-facebook"></i></li>
-            <li><i class="fa-brands fa-linkedin"></i></li>
-            <li><i class="fa-brands fa-square-instagram"></i></li>
-            <li><i class="fa-brands fa-google"></i></li>
-          </ul>
+          <div class="social-icons">
+            <p><i class="fa-brands fa-facebook"></i></p>
+            <p><i class="fa-brands fa-linkedin"></i></p>
+            <p><i class="fa-brands fa-square-instagram"></i></p>
+            <p><i class="fa-brands fa-google"></i></p>
+          </div>
          </div>
       </div>
     </section>
