conclusion section quick links, courses, and socials final draft

--- a/index.html
+++ b/index.html
@@ -777,25 +777,26 @@
         <!-- courses -->
         <div class="courses">
           <h2 class="details-heading">Courses</h2>
-        <ul>
-          <li>Python-Django Fullstack</li>
-          <li>MERN Fullstack</li>
-          <li>React JS</li>
-          <li>Front-End Development</li>
-          <li>Data Science</li>
-        </ul>
+          <ul>
+            <li>Python-Django Fullstack</li>
+            <li>MERN Fullstack</li>
+            <li>React JS</li>
+            <li>Front-End Development</li>
+            <li>Data Science</li>
+          </ul>
         </div>
 
         <!-- social links -->
-         <div class="socials">
+        <div class="socials">
           <h2 class="details-heading">Socials</h2>
           <div class="social-icons">
+            <div class="sc-in-div">
             <p><i class="fa-brands fa-facebook"></i></p>
             <p><i class="fa-brands fa-linkedin"></i></p>
             <p><i class="fa-brands fa-square-instagram"></i></p>
             <p><i class="fa-brands fa-google"></i></p>
           </div>
-         </div>
+        </div>
       </div>
     </section>
   </body>
